# scientific-computing-toolkit

./: .gitattributes  README.md
projects/precipitation-anomaly-diagnostics/: .gitignore  LICENSE  PUBLICATION_BOUNDARIES.md  README.md  SANITIZATION_REPORT.md  pyproject.toml
projects/precipitation-anomaly-diagnostics-lab/: .gitignore  README.md  SANITIZATION_REPORT.md  pyproject.toml  requirements.txt
projects/precipitation-anomaly-diagnostics-lab/configs/: example.yaml
projects/precipitation-anomaly-diagnostics-lab/docs/: calculation-methods.md  data-policy.md  inference-analysis.md  methodology.md  reproducibility.md  reviewer-path.md
projects/precipitation-anomaly-diagnostics-lab/examples/: generate_synthetic_demo_assets.py  synthetic-inference-report.md  synthetic_demo_summary.csv
projects/precipitation-anomaly-diagnostics-lab/scripts/: _bootstrap.py  run_composite_circulation.py  run_eof.py  run_index_correlations.py  run_lag_diagnostics.py  run_mca.py  run_precipitation_anomalies.py  run_regression.py  run_trend_diagnostics.py
projects/precipitation-anomaly-diagnostics-lab/tests/: test_statistics.py
projects/precipitation-anomaly-diagnostics/configs/: example.yaml
projects/precipitation-anomaly-diagnostics/docs/: data-policy.md  inference-framework.md  methodology.md  reproducibility.md  reviewer-path.md
projects/precipitation-anomaly-diagnostics/examples/: README.md  regional_precipitation_summary_1961_2022.csv  sample_metadata.json
projects/precipitation-anomaly-diagnostics/reports/: example-report.md
projects/precipitation-anomaly-diagnostics/scripts/: run_composite_analysis.py  run_eof_analysis.py  run_preprocessing.py
projects/precipitation-anomaly-diagnostics/tests/: test_eof.py  test_preprocess.py
projects/python-weather-diagnostics-toolkit/: .gitignore  PUBLICATION_BOUNDARIES.md  README.md  SANITIZATION_REPORT.md  pyproject.toml
projects/python-weather-diagnostics-toolkit/configs/: example.yaml
projects/python-weather-diagnostics-toolkit/docs/: calculation-methods.md  climate-statistical-diagnostics.md  data-policy.md  diagnostic-analysis.md  focused-case-abstraction.md  methodology.md  reproducibility.md  reviewer-path.md  source-to-public-mapping.md  station-precipitation-workflows.md
projects/python-weather-diagnostics-toolkit/examples/: sample_metadata.json  synthetic-weather-diagnostics-report.md
projects/python-weather-diagnostics-toolkit/scripts/: run_climate_statistics.py  run_dynamics_summary.py  run_focused_case_summary.py  run_precipitation_workflow.py  run_synthetic_ensemble.py  run_thermodynamic_check.py
projects/python-weather-diagnostics-toolkit/tests/: test_aliases_and_synthetic.py  test_climate.py  test_dynamics.py  test_ensemble.py  test_features.py  test_interpolation.py  test_precipitation.py  test_thermodynamics.py
tools/sbom-diff-and-risk/: .gitignore  PYPI_DESCRIPTION.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0-rc.1.md  pyproject.toml
tools/sbom-diff-and-risk/docs/: dependency-risk-heuristics.md  example-artifact-regeneration.md  github-actions-consumer-example.md  github-code-scanning.md  parser-boundaries.md  policy-decision-ci-cookbook.md  policy-decision-explainability.md  policy-schema.md  policy-warning-reviewer-case.md  pypi-production-publishing-decision.md  pypi-trusted-publishing-readiness.md  release-provenance.md  report-schema.md  reviewer-brief.md  reviewer-evidence-pack.md  reviewer-path.md  sbom-basics.md  self-provenance.md  summary-json-ci-cookbook.md  verification.md
tools/sbom-diff-and-risk/examples/: cdx_after.json  github-actions-consumer.yml  github-actions-policy-consumer.yml  policy-minimal.yml  policy-provenance-minimal.yml  policy-provenance-strict.yml  policy-scorecard-minimal.yml  policy-strict.yml  pyproject_before.toml  pyproject_groups_after.toml  requirements_after.txt  sample-policy-fail-report.json  sample-policy-fail-report.md  sample-policy-warn-report.json  sample-policy-warn-report.md  sample-policy.json  sample-provenance-report.json  sample-provenance-report.md  sample-provenance-report.sarif  sample-report.json  sample-report.md  sample-requirements-report.json  sample-requirements-report.md  sample-sarif.sarif  sample-scorecard-report.json  sample-scorecard-report.md  (+5 more)
(+104 files in other folders)
