[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "precipitation-anomaly-diagnostics-lab"
version = "0.1.0"
description = "Public-safe gridded climate diagnostics mini-lab."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "stacknil" }]
dependencies = [
  "matplotlib>=3.7",
  "netCDF4>=1.6",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "xarray>=2023.1",
]

[tool.setuptools.packages.find]
where = ["src"]
