[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precipitation-anomaly-diagnostics"
version = "0.1.0"
description = "A public-safe scientific-computing mini-lab for precipitation anomaly diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "stacknil" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2023.1",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
plot = ["cartopy>=0.22"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
