[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-diff-and-risk"
version = "0.4.0"
description = "Local, deterministic SBOM diff and heuristic risk reporting."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "packaging>=24.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sbom-diff-risk = "sbom_diff_risk.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
